syntax = "proto3";

package auth;

import "google/protobuf/empty.proto";

option go_package = "auth/gen;auth";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ListUsers (google.protobuf.Empty) returns (ListUsersResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message ListUsersResponse {
    repeated User users = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    string password = 3;
}
